# rflasher

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml  deploy-web.yml
chips/vendors/: amic.ron  atmel.ron  boya.ron  eon.ron  esi.ron  esmt.ron  fudan.ron  gigadevice.ron  intel.ron  issi.ron  macronix.ron  micron.ron  nantronics.ron  pmc.ron  puya.ron  sanyo.ron  spansion.ron  sst.ron  winbond.ron  xmc.ron  xtx.ron  zetta.ron
crates/postcard-spi-icd/: Cargo.toml
crates/postcard-spi-icd/src/: lib.rs
crates/rflasher-ch341a/: Cargo.toml
crates/rflasher-ch341a/src/: device.rs  error.rs  lib.rs  protocol.rs  web_device.rs
crates/rflasher-ch347/: Cargo.toml
crates/rflasher-ch347/src/: device.rs  error.rs  lib.rs  protocol.rs
crates/rflasher-chips-codegen/: Cargo.toml
crates/rflasher-chips-codegen/src/: lib.rs
crates/rflasher-core/: Cargo.toml  build.rs
crates/rflasher-core/src/: error.rs  lib.rs
crates/rflasher-core/src/chip/: database.rs  features.rs  mod.rs  types.rs
crates/rflasher-core/src/flash/: context.rs  device.rs  hybrid_device.rs  mod.rs  opaque_device.rs  operations.rs  prepare.rs  spi_device.rs  unified.rs
crates/rflasher-core/src/layout/: flash.rs  fmap.rs  ifd.rs  mod.rs  toml.rs  types.rs
crates/rflasher-core/src/programmer/: bitbang.rs  mod.rs  traits.rs
crates/rflasher-core/src/protocol/: mod.rs  spi25.rs
crates/rflasher-core/src/sfdp/: mod.rs  parser.rs  types.rs
crates/rflasher-core/src/spi/: address.rs  command.rs  io_mode.rs  mod.rs  opcodes.rs
crates/rflasher-core/src/wp/: mod.rs  ops.rs  ranges.rs  types.rs
crates/rflasher-dediprog/: Cargo.toml
crates/rflasher-dediprog/src/: device.rs  error.rs  lib.rs  protocol.rs
crates/rflasher-dummy/: Cargo.toml
crates/rflasher-dummy/src/: lib.rs
crates/rflasher-flash/: Cargo.toml
crates/rflasher-flash/src/: handle.rs  lib.rs  registry.rs
crates/rflasher-ft4222/: Cargo.toml
crates/rflasher-ft4222/src/: device.rs  error.rs  lib.rs  protocol.rs
crates/rflasher-ftdi/: Cargo.toml
crates/rflasher-ftdi/src/: device.rs  error.rs  lib.rs  native_device.rs  native_error.rs  protocol.rs  rsftdi_device.rs  rsftdi_error.rs  wasm_device.rs  wasm_error.rs
crates/rflasher-internal/: Cargo.toml
crates/rflasher-internal/src/: amd_enable.rs  amd_pci.rs  amd_spi100.rs  ati_pci.rs  ati_spi.rs  chipset.rs  controller.rs  error.rs  host.rs  ich_regs.rs  ichspi.rs  intel_pci.rs  lib.rs  pci.rs  physmap.rs  programmer.rs
crates/rflasher-linux-gpio/: Cargo.toml
crates/rflasher-linux-gpio/src/: device.rs  error.rs  lib.rs
crates/rflasher-linux-mtd/: Cargo.toml
crates/rflasher-linux-mtd/src/: device.rs  error.rs  lib.rs
crates/rflasher-linux-spi/: Cargo.toml
crates/rflasher-linux-spi/src/: device.rs  error.rs  lib.rs
crates/rflasher-postcard/: Cargo.toml
crates/rflasher-postcard-spi/: Cargo.toml
crates/rflasher-postcard-spi/src/: device.rs  error.rs  lib.rs
crates/rflasher-postcard/examples/rp2040-firmware/: Cargo.toml
crates/rflasher-postcard/examples/rp2040-firmware/src/: main.rs
crates/rflasher-postcard/src/: device.rs  error.rs  lib.rs  protocol.rs
crates/rflasher-raiden/: Cargo.toml
crates/rflasher-raiden/src/: device.rs  error.rs  lib.rs  protocol.rs
crates/rflasher-repl/: Cargo.toml
crates/rflasher-repl/src/: error.rs  highlight.rs  lib.rs  spi_module.rs
crates/rflasher-serprog/: Cargo.toml
crates/rflasher-serprog/src/: device.rs  error.rs  lib.rs  protocol.rs  transport.rs
crates/rflasher-sunxi-fel/: Cargo.toml
crates/rflasher-sunxi-fel/src/: chips.rs  device.rs  error.rs  lib.rs  protocol.rs
crates/rflasher-sunxi-fel/src/payloads/: README.md
crates/rflasher-wasm/: Cargo.toml  Trunk.toml  index.html
crates/rflasher-wasm/.cargo/: config.toml
crates/rflasher-wasm/src/: app.rs  lib.rs  transport.rs
docs/: crabefi-embedded-plan.md
examples/: test_nusb.rs
firmware/pico-postcard-spi/: Cargo.toml  build.rs  memory.x
firmware/pico-postcard-spi/.cargo/: config.toml
firmware/pico-postcard-spi/src/: handlers.rs  main.rs
firmware/pico-postcard-spi/src/pio_qspi/: mod.rs
src/: cli.rs  main.rs  programmers.rs
src/commands/: erase.rs  layout.rs  list.rs  mod.rs  opaque.rs  probe.rs  read.rs  repl.rs  unified.rs  verify.rs  wp.rs  write.rs
util/: multiio_audit.py
