[workspace]
resolver = "2"
members = [
    "crates/rflasher-core",
    "crates/rflasher-flash",
    "crates/rflasher-chips-codegen",
    "crates/rflasher-ch341a",
    "crates/rflasher-serprog",
    "crates/rflasher-ftdi",
    "crates/rflasher-internal",
    "crates/rflasher-linux-spi",
    "crates/rflasher-linux-mtd",
    "crates/rflasher-linux-gpio",
    "crates/rflasher-dummy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/user/rflasher"

[workspace.dependencies]
# Internal crates
rflasher-core = { path = "crates/rflasher-core", default-features = false }

# Core
bitflags = "2"
embedded-io = "0.6"
embedded-io-async = "0.6"
log = "0.4"

# std-only
thiserror = "2"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
nusb = "0.1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# Build/codegen
serde = { version = "1", features = ["derive"] }
ron = "0.8"
quote = "1"
proc-macro2 = "1"
syn = "2"
prettyplease = "0.2"

[package]
name = "rflasher"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["dummy", "ch341a", "serprog", "linux-spi", "linux-mtd", "internal"]

# Programmer features (passed through to rflasher-flash)
dummy = ["rflasher-flash/dummy"]
ch341a = ["rflasher-flash/ch341a"]
serprog = ["rflasher-flash/serprog"]
ftdi = ["rflasher-flash/ftdi"]
linux-spi = ["rflasher-flash/linux-spi"]
linux-mtd = ["rflasher-flash/linux-mtd"]
linux-gpio = ["rflasher-flash/linux-gpio"]
internal = ["rflasher-flash/internal"]

# Enable all programmers
all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "linux-mtd", "linux-gpio", "internal"]

[dependencies]
rflasher-core = { workspace = true, features = ["std"] }
rflasher-flash = { path = "crates/rflasher-flash", features = ["std"] }
clap.workspace = true
clap_mangen = "0.2"
env_logger.workspace = true
log.workspace = true
indicatif.workspace = true
thiserror.workspace = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
