[workspace]
resolver = "2"
members = [
    "crates/rflasher-core",
    "crates/rflasher-flash",
    "crates/rflasher-chips-codegen",
    "crates/rflasher-ch341a",
    "crates/rflasher-ch347",
    "crates/rflasher-dediprog",
    "crates/rflasher-serprog",
    "crates/rflasher-ftdi",
    "crates/rflasher-ft4222",
    "crates/rflasher-internal",
    "crates/rflasher-linux-spi",
    "crates/rflasher-linux-mtd",
    "crates/rflasher-linux-gpio",
    "crates/rflasher-dummy",
    "crates/rflasher-raiden",
    "crates/rflasher-repl",
    "crates/rflasher-wasm",
    "crates/postcard-spi-icd",
    "crates/rflasher-postcard-spi",
]

# Exclude WASM crate and firmware from default build (requires different targets)
default-members = [
    ".",
    "crates/rflasher-core",
    "crates/rflasher-flash",
    "crates/rflasher-chips-codegen",
    "crates/rflasher-ch341a",
    "crates/rflasher-ch347",
    "crates/rflasher-dediprog",
    "crates/rflasher-serprog",
    "crates/rflasher-ftdi",
    "crates/rflasher-ft4222",
    "crates/rflasher-internal",
    "crates/rflasher-linux-spi",
    "crates/rflasher-linux-mtd",
    "crates/rflasher-linux-gpio",
    "crates/rflasher-dummy",
    "crates/rflasher-raiden",
    "crates/rflasher-repl",
    "crates/postcard-spi-icd",
    "crates/rflasher-postcard-spi",
]

# Firmware is excluded from workspace due to different target
exclude = [
    "firmware/pico-postcard-spi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/user/rflasher"

[workspace.dependencies]
# Internal crates - NOTE: is_sync is NOT included here to allow async builds (WASM)
# Crates that need sync mode should add `features = ["is_sync"]` explicitly
rflasher-core = { path = "crates/rflasher-core", default-features = false }

# Core
bitflags = "2"
embedded-io = "0.6"
embedded-io-async = "0.6"
log = "0.4"

# std-only
thiserror = "2"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
nusb = "0.2.1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# Build/codegen
serde = { version = "1", features = ["derive"] }
ron = "0.8"
quote = "1"
proc-macro2 = "1"
syn = "2"
prettyplease = "0.2"

# no_std compatible
heapless = { version = "0.8", features = ["serde"] }
once_cell = { version = "1.21", default-features = false }
maybe-async = "0.2"

[package]
name = "rflasher"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ft4222", "ftdi", "linux-spi", "linux-mtd", "internal", "raiden", "postcard-spi"]

# Programmer features (passed through to rflasher-flash)
dummy = ["rflasher-flash/dummy"]
ch341a = ["rflasher-flash/ch341a"]
ch347 = ["rflasher-flash/ch347"]
dediprog = ["rflasher-flash/dediprog"]
serprog = ["rflasher-flash/serprog"]
ftdi = ["rflasher-flash/ftdi"]
ft4222 = ["rflasher-flash/ft4222"]
linux-spi = ["rflasher-flash/linux-spi"]
linux-mtd = ["rflasher-flash/linux-mtd"]
linux-gpio = ["rflasher-flash/linux-gpio"]
internal = ["rflasher-flash/internal"]
raiden = ["rflasher-flash/raiden"]
postcard-spi = ["rflasher-flash/postcard-spi"]

# REPL feature for scripting with Steel Scheme
repl = ["dep:rflasher-repl"]

# Enable all programmers
all-programmers = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ftdi", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden", "postcard-spi"]

[dependencies]
rflasher-core = { workspace = true, features = ["std", "is_sync"] }
rflasher-flash = { path = "crates/rflasher-flash", features = ["std", "is_sync"] }
rflasher-repl = { path = "crates/rflasher-repl", optional = true }
clap.workspace = true
clap_mangen = "0.2"
env_logger.workspace = true
log.workspace = true
indicatif.workspace = true
thiserror.workspace = true

[dev-dependencies]
nusb = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
