[package]
name = "postcard-spi-icd"
version = "0.1.0"
edition = "2021"
description = "Interface Control Document for postcard-spi programmer protocol"
license = "GPL-2.0-or-later"

[dependencies]
postcard-rpc = { version = "0.12", default-features = false }
postcard-schema = { version = "0.2", features = ["heapless-v0_8"] }
serde = { version = "1", default-features = false, features = ["derive"] }
heapless = { version = "0.8", default-features = false, features = ["serde"] }

[features]
default = []
std = ["serde/std"]
