[package]
name = "rflasher-chips-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Build-time code generator for flash chip database"

[dependencies]
serde.workspace = true
ron.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
prettyplease.workspace = true
