[package]
name = "rflasher-flash"
version = "0.1.0"
edition = "2021"

[dependencies]
rflasher-core = { path = "../rflasher-core" }
log = "0.4"

# Optional programmer dependencies
rflasher-dummy = { path = "../rflasher-dummy", optional = true }
rflasher-ch341a = { path = "../rflasher-ch341a", optional = true }
rflasher-ch347 = { path = "../rflasher-ch347", optional = true }
rflasher-dediprog = { path = "../rflasher-dediprog", optional = true }
rflasher-serprog = { path = "../rflasher-serprog", optional = true }
rflasher-ftdi = { path = "../rflasher-ftdi", optional = true }
rflasher-ft4222 = { path = "../rflasher-ft4222", optional = true }
rflasher-linux-spi = { path = "../rflasher-linux-spi", optional = true }
rflasher-linux-mtd = { path = "../rflasher-linux-mtd", optional = true }
rflasher-linux-gpio = { path = "../rflasher-linux-gpio", optional = true }
rflasher-internal = { path = "../rflasher-internal", optional = true }
rflasher-raiden = { path = "../rflasher-raiden", optional = true }

[features]
default = ["std", "is_sync"]
std = ["rflasher-core/std"]
alloc = ["rflasher-core/alloc"]
# Sync mode - when enabled, all programmer code is synchronous
is_sync = ["rflasher-core/is_sync", "rflasher-serprog?/is_sync", "rflasher-ch341a?/is_sync", "rflasher-ch347?/is_sync", "rflasher-ftdi?/is_sync"]

# Programmer features
dummy = ["dep:rflasher-dummy"]
ch341a = ["dep:rflasher-ch341a"]
ch347 = ["dep:rflasher-ch347"]
dediprog = ["dep:rflasher-dediprog"]
serprog = ["dep:rflasher-serprog"]
ftdi = ["dep:rflasher-ftdi"]
# Use pure-Rust rs-ftdi backend for FTDI MPSSE (instead of C libftdi1)
ftdi-native = ["dep:rflasher-ftdi", "rflasher-ftdi/native"]
ft4222 = ["dep:rflasher-ft4222"]
linux-spi = ["dep:rflasher-linux-spi"]
linux-mtd = ["dep:rflasher-linux-mtd"]
linux-gpio = ["dep:rflasher-linux-gpio"]
internal = ["dep:rflasher-internal"]
raiden = ["dep:rflasher-raiden"]
