[package]
name = "rflasher-flash"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Convenience facade for rflasher programmer backends"

[dependencies]
rflasher-core = { version = "0.1.0", path = "../rflasher-core" }
log = "0.4"

# Optional programmer dependencies
rflasher-dummy = { version = "0.1.0", path = "../rflasher-dummy", optional = true }
rflasher-ch341a = { version = "0.1.0", path = "../rflasher-ch341a", optional = true }
rflasher-ch347 = { version = "0.1.0", path = "../rflasher-ch347", optional = true }
rflasher-dediprog = { version = "0.1.0", path = "../rflasher-dediprog", optional = true }
rflasher-serprog = { version = "0.1.0", path = "../rflasher-serprog", optional = true }
rflasher-ftdi = { version = "0.1.0", path = "../rflasher-ftdi", optional = true }
rflasher-ft4222 = { version = "0.1.0", path = "../rflasher-ft4222", optional = true }
rflasher-linux-spi = { version = "0.1.0", path = "../rflasher-linux-spi", optional = true }
rflasher-linux-mtd = { version = "0.1.0", path = "../rflasher-linux-mtd", optional = true }
rflasher-linux-gpio = { version = "0.1.0", path = "../rflasher-linux-gpio", optional = true }
rflasher-internal = { version = "0.1.0", path = "../rflasher-internal", optional = true }
rflasher-raiden = { version = "0.1.0", path = "../rflasher-raiden", optional = true }
rflasher-sunxi-fel = { version = "0.1.0", path = "../rflasher-sunxi-fel", optional = true }

[features]
default = ["std", "is_sync"]
std = ["rflasher-core/std"]
alloc = ["rflasher-core/alloc"]
# Sync mode - when enabled, all programmer code is synchronous
is_sync = ["rflasher-core/is_sync", "rflasher-serprog?/is_sync", "rflasher-ch341a?/is_sync", "rflasher-ch347?/is_sync", "rflasher-ftdi?/is_sync"]

# Programmer features
dummy = ["dep:rflasher-dummy"]
ch341a = ["dep:rflasher-ch341a"]
ch347 = ["dep:rflasher-ch347"]
dediprog = ["dep:rflasher-dediprog"]
serprog = ["dep:rflasher-serprog"]
ftdi = ["dep:rflasher-ftdi"]
# Use pure-Rust rs-ftdi backend for FTDI MPSSE (instead of C libftdi1)
ftdi-native = ["dep:rflasher-ftdi", "rflasher-ftdi/native"]
ft4222 = ["dep:rflasher-ft4222"]
linux-spi = ["dep:rflasher-linux-spi"]
linux-mtd = ["dep:rflasher-linux-mtd"]
linux-gpio = ["dep:rflasher-linux-gpio"]
internal = ["dep:rflasher-internal"]
raiden = ["dep:rflasher-raiden"]
sunxi-fel = ["dep:rflasher-sunxi-fel"]
