[package]
name = "rflasher-ft4222"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FT4222H USB SPI programmer support for rflasher"

[features]
default = ["std"]
std = ["rflasher-core/std", "nusb", "futures-lite"]

[dependencies]
rflasher-core.workspace = true
nusb = { workspace = true, optional = true }
futures-lite = { version = "2", optional = true }
log.workspace = true
