[package]
name = "rflasher-internal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intel chipset internal flash programmer support for rflasher"

[features]
default = ["std"]
std = ["alloc", "is_sync", "rflasher-core/std", "dep:thiserror", "dep:libc"]
alloc = ["rflasher-core/alloc"]
is_sync = ["rflasher-core/is_sync"]

[dependencies]
rflasher-core.workspace = true
log.workspace = true
thiserror = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
