[package]
name = "rflasher-linux-gpio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux GPIO bitbang SPI support for rflasher"

[features]
default = ["std"]
std = ["rflasher-core/std"]

[dependencies]
rflasher-core.workspace = true
log.workspace = true
thiserror.workspace = true
gpiocdev = { version = "0.8", features = ["uapi_v1", "uapi_v2"] }
