[package]
name = "rflasher-linux-gpio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux GPIO bitbang SPI support for rflasher"

[features]
default = ["std"]
std = ["rflasher-core/std", "is_sync"]
is_sync = ["rflasher-core/is_sync"]

[dependencies]
rflasher-core.workspace = true
log.workspace = true
thiserror.workspace = true
gpiocdev = { version = "0.8", features = ["uapi_v1", "uapi_v2"] }
