[package]
name = "rflasher-serprog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Serial Flasher Protocol (serprog) support for rflasher"

[features]
default = ["std"]
std = ["rflasher-core/std", "serialport", "thiserror"]

[dependencies]
rflasher-core.workspace = true
embedded-io.workspace = true
embedded-io-async.workspace = true
log.workspace = true

# std-only dependencies
serialport = { version = "4.5", optional = true }
thiserror = { workspace = true, optional = true }
