[package]
name = "rflasher-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web interface for rflasher using egui and WebSerial/WebUSB"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
# Internal crates (async mode - explicitly NO is_sync feature)
# We override the workspace dependency to ensure async mode for WASM
rflasher-core = { path = "../rflasher-core", default-features = false, features = ["std", "alloc", "static-chips"] }
rflasher-serprog = { path = "../rflasher-serprog", default-features = false, features = ["std", "wasm"] }
rflasher-ch341a = { path = "../rflasher-ch341a", default-features = false, features = ["wasm"] }
rflasher-ch347 = { path = "../rflasher-ch347", default-features = false, features = ["wasm"] }
rflasher-ftdi = { path = "../rflasher-ftdi", default-features = false, features = ["wasm"] }
rflasher-ft4222 = { path = "../rflasher-ft4222", default-features = false, features = ["wasm"] }
rflasher-dediprog = { path = "../rflasher-dediprog", default-features = false, features = ["wasm"] }

# GUI
eframe = { version = "0.33", default-features = false, features = [
    "glow",
    "web_screen_reader",
] }
egui = "0.33"
egui_extras = "0.33"

# Async runtime for WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web API bindings
web-sys = { version = "0.3", features = [
    "Navigator",
    "Window",
    "WorkerNavigator",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "HtmlElement",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamReaderMode",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "ReadableStreamByobReader",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "console",
    # WebSerial API (unstable - requires --cfg=web_sys_unstable_apis)
    "Serial",
    "SerialPort",
    "SerialOptions",
    "SerialPortInfo",
    "FlowControlType",
    "ParityType",
    # WebUSB API types (unstable - for USB device programmers)
    "Usb",
    "UsbConnectionEvent",
    "UsbControlTransferParameters",
    "UsbDevice",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
    "UsbDirection",
    "UsbInTransferResult",
    "UsbOutTransferResult",
    "UsbRecipient",
    "UsbRequestType",
    "UsbTransferStatus",
] }

# maybe-async for Transport trait
maybe-async.workspace = true

# Logging
log = { workspace = true }
console_log = "1"
console_error_panic_hook = "0.1"

# Async utilities
futures = "0.3"
